# testament

./: .gitignore  Cargo.toml  README.md  RELEASING.md  testament.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  zizmor.yml
crates/testament-adapter-api/: Cargo.toml
crates/testament-adapter-api/src/: lib.rs
crates/testament-cli/: Cargo.toml
crates/testament-cli/src/: main.rs
crates/testament-core/: Cargo.toml
crates/testament-core/src/: config.rs  discovery.rs  evidence.rs  gate.rs  ir.rs  lib.rs  metric.rs
crates/testament-evidence/: Cargo.toml
crates/testament-evidence/src/: lib.rs
crates/testament-fw-minitest/: Cargo.toml
crates/testament-fw-minitest/src/: lib.rs
crates/testament-fw-rspec/: Cargo.toml
crates/testament-fw-rspec/src/: lib.rs
crates/testament-fw-testunit/: Cargo.toml
crates/testament-fw-testunit/src/: lib.rs
crates/testament-lang-ruby/: Cargo.toml
crates/testament-lang-ruby/src/: lib.rs
crates/testament-metrics/: Cargo.toml
crates/testament-metrics/src/: adapters.rs  adequacy.rs  cache.rs  lib.rs  redundancy.rs  ruby.rs  smells.rs
crates/testament-report/: Cargo.toml
crates/testament-report/src/: lib.rs
fixtures/evidence/: mutant.json  per-test.json  simplecov.json  testament.toml  trace.json
fixtures/ruby/: sample_spec.rb
probes/ruby/testament-probe-ruby/: README.md  testament-probe-ruby.gemspec
probes/ruby/testament-probe-ruby/lib/testament/: probe.rb
probes/ruby/testament-probe-ruby/lib/testament/probe/: version.rb
scripts/: check-release-version
