[workspace]
members = [
    "crates/testament-adapter-api",
    "crates/testament-core",
    "crates/testament-evidence",
    "crates/testament-lang-ruby",
    "crates/testament-fw-rspec",
    "crates/testament-fw-minitest",
    "crates/testament-fw-testunit",
    "crates/testament-metrics",
    "crates/testament-report",
    "crates/testament-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.91"

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "0.8.23"
