[workspace]
members = [
    "crates/testament-adapter-api",
    "crates/testament-core",
    "crates/testament-evidence",
    "crates/testament-lang-ruby",
    "crates/testament-fw-rspec",
    "crates/testament-fw-minitest",
    "crates/testament-fw-testunit",
    "crates/testament-metrics",
    "crates/testament-report",
    "crates/testament-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Yudai Takada"]
edition = "2024"
license = "MIT"
repository = "https://github.com/ydah/testament"
readme = "README.md"
keywords = ["testing", "test-quality", "ruby", "static-analysis", "cli"]
categories = ["development-tools::testing"]
publish = ["crates-io"]
rust-version = "1.91"

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
testament-adapter-api = { version = "0.1.0", path = "crates/testament-adapter-api" }
testament-core = { version = "0.1.0", path = "crates/testament-core" }
testament-evidence = { version = "0.1.0", path = "crates/testament-evidence" }
testament-fw-minitest = { version = "0.1.0", path = "crates/testament-fw-minitest" }
testament-fw-rspec = { version = "0.1.0", path = "crates/testament-fw-rspec" }
testament-fw-testunit = { version = "0.1.0", path = "crates/testament-fw-testunit" }
testament-lang-ruby = { version = "0.1.0", path = "crates/testament-lang-ruby" }
testament-metrics = { version = "0.1.0", path = "crates/testament-metrics" }
testament-report = { version = "0.1.0", path = "crates/testament-report" }
toml = "0.8.23"
