[package]
name = "testament-adapter-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
rust-version.workspace = true
description = "Adapter traits and syntax tree abstractions for testament"

[dependencies]
testament-core.workspace = true

[lib]
path = "src/lib.rs"
