[package]
name = "testament-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "testament"
path = "src/main.rs"

[dependencies]
clap.workspace = true
testament-core = { path = "../testament-core" }
testament-evidence = { path = "../testament-evidence" }
testament-metrics = { path = "../testament-metrics" }
testament-report = { path = "../testament-report" }
