[package]
name = "testament-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
rust-version.workspace = true
description = "Research-informed test quality guardrails for Ruby test suites"

[[bin]]
name = "testament"
path = "src/main.rs"

[dependencies]
clap.workspace = true
testament-core.workspace = true
testament-evidence.workspace = true
testament-metrics.workspace = true
testament-report.workspace = true
