[package]
name = "testament-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
rust-version.workspace = true
description = "Core test IR, evidence, metric, configuration, and gate types for testament"

[dependencies]
globset = "0.4.16"
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[lib]
path = "src/lib.rs"
