[package]
name = "testament-evidence"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde_json.workspace = true
testament-adapter-api = { path = "../testament-adapter-api" }
testament-core = { path = "../testament-core" }

[lib]
path = "src/lib.rs"

