[package]
name = "testament-evidence"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
rust-version.workspace = true
description = "Coverage, mutation, and trace evidence parsers for testament"

[dependencies]
serde_json.workspace = true
testament-adapter-api.workspace = true
testament-core.workspace = true

[lib]
path = "src/lib.rs"
