[package]
name = "testament-fw-minitest"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
testament-adapter-api = { path = "../testament-adapter-api" }
testament-core = { path = "../testament-core" }
testament-lang-ruby = { path = "../testament-lang-ruby" }

[lib]
path = "src/lib.rs"

