[package]
name = "testament-fw-minitest"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
rust-version.workspace = true
description = "Minitest framework semantics for testament"

[dependencies]
testament-adapter-api.workspace = true
testament-core.workspace = true
testament-lang-ruby.workspace = true

[lib]
path = "src/lib.rs"
