[package]
name = "testament-fw-rspec"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
rust-version.workspace = true
description = "RSpec framework semantics for testament"

[dependencies]
testament-adapter-api.workspace = true
testament-core.workspace = true
testament-lang-ruby.workspace = true

[lib]
path = "src/lib.rs"
