[package]
name = "testament-lang-ruby"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
testament-adapter-api = { path = "../testament-adapter-api" }
testament-core = { path = "../testament-core" }
tree-sitter = "0.26.10"
tree-sitter-ruby = "0.23.1"

[lib]
path = "src/lib.rs"

