[package]
name = "testament-lang-ruby"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
testament-adapter-api = { path = "../testament-adapter-api" }
testament-core = { path = "../testament-core" }
ruby-prism = "1.9.0"

[lib]
path = "src/lib.rs"
