[package]
name = "testament-metrics"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde_json.workspace = true
testament-adapter-api = { path = "../testament-adapter-api" }
testament-core = { path = "../testament-core" }
testament-fw-minitest = { path = "../testament-fw-minitest" }
testament-fw-rspec = { path = "../testament-fw-rspec" }
testament-fw-testunit = { path = "../testament-fw-testunit" }
testament-lang-ruby = { path = "../testament-lang-ruby" }

[lib]
path = "src/lib.rs"
