[package]
name = "testament-metrics"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
rust-version.workspace = true
description = "Quality metric computation for testament test IR"

[dependencies]
serde_json.workspace = true
sha2 = "0.11.0"
testament-adapter-api.workspace = true
testament-core.workspace = true
testament-fw-minitest.workspace = true
testament-fw-rspec.workspace = true
testament-fw-testunit.workspace = true
testament-lang-ruby.workspace = true

[lib]
path = "src/lib.rs"
