[package]
name = "testament-report"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
quick-xml = "0.41.0"
serde_json.workspace = true
testament-core = { path = "../testament-core" }

[dev-dependencies]
testament-metrics = { path = "../testament-metrics" }

[lib]
path = "src/lib.rs"
