[package]
name = "testament-report"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
rust-version.workspace = true
description = "TTY, JSON, Markdown, SARIF, and JUnit report rendering for testament"

[dependencies]
quick-xml = "0.41.0"
serde_json.workspace = true
testament-core.workspace = true

[dev-dependencies]
testament-metrics.workspace = true

[lib]
path = "src/lib.rs"
